onrender host allowed

--- a/Templates/blog/blogPost.html
+++ b/Templates/blog/blogPost.html
@@ -16,7 +16,7 @@
 </div>
 {% endif %}
     <h2 class="display-5 link-body-emphasis mb-1">{{post.title}}</h2>
-    <p class="blog-post-meta">{{post.timestamp}} by <a href="#">{{post.author}}</a></p>
+    <p class="blog-post-meta">{{post.timestamp}} by {{post.author}}</p>
 
     <p>{{post.content|safe}}</p>
     <hr>
