--- a/Templates/base.html
+++ b/Templates/base.html
@@ -55,7 +55,7 @@
           Log in
         </button>
         <!-- Button Sign up trigger modal -->
-        <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#signupModal">
+        <button type="button" class="btn btn-primary m-2" data-bs-toggle="modal" data-bs-target="#signupModal">
           Sign up
         </button>
         {% endif %}
@@ -116,7 +116,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="loginModalTitle">Log in</h1>
+          <h1 class="modal-title fs-5 m-2" id="loginModalTitle">Log in</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
